--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,13 @@ jobs:
       - run:
           name: "Say hello"
           command: "echo Hello, World!"
+  print_world:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run:
+          name: "Say world"
+          command: "echo world!"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -24,3 +31,7 @@ workflows:
   say-hello-workflow:
     jobs:
       - say-hello
+      - print_world:
+          requires: 
+            - say-hello
+
