--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,22 +5,38 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  say-hello:
+  save_hello_world_output:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: cimg/base:stable
+      - image: circleci/node:13.8.0
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
-      - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: "Say hello output"
+          command: echo "Hello world" > output.txt
+      - persist_to_workspace
+           root: ~/
+           paths: 
+            - output.txt
+    print_output_file
+      docker:
+        - image: circleci/node:13.8.0
+       steps:
+        - attach_workspace:
+            at: ~/
+        - run:
+            name: "Print output"
+            command: cat ~/output.txt
+      
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  say-hello-workflow:
+  hello_world_workflow:
     jobs:
-      - say-hello
+      - save_hello_world_output
+      - print_output_file:
+          requires:
+            - save_hello_world_output
