--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,20 @@ version: 2.1
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+
+commands:
+  print_pipeline_id:
+    steps:
+      - run: echo ${CIRCLE_WORKFLOW_ID}
+
 jobs:
+  my_job:
+    docker:
+      - image: circleci/node:13.8.0
+     steps:
+      - print_pipeline_id
+      
+      
   save_hello_world_output:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
@@ -16,11 +29,13 @@ jobs:
       - run:
           name: "Say hello output"
           command: echo "Hello world" > output.txt
-      - persist_to_workspace
+      - persist_to_workspace:
            root: ~/
            paths: 
             - output.txt
-    print_output_file
+            
+            
+    print_output_file:
       docker:
         - image: circleci/node:13.8.0
        steps:
@@ -36,6 +51,7 @@ jobs:
 workflows:
   hello_world_workflow:
     jobs:
+      - my_job
       - save_hello_world_output
       - print_output_file:
           requires:
